# rust-mdns

./: Cargo.toml  Dockerfile  build.sh  docker-compose-resolvers.yaml
examples/: register.rs  respond.rs  respond.rs~
src/: address_family.rs  fsm.rs  lib.rs  record.rs  services.rs
